--- a/rm_add_element_DOM/style.css
+++ b/rm_add_element_DOM/style.css
@@ -3,13 +3,7 @@
   font-size: 20px;
 }
 
-.add-button {
-  padding: 10px;
-  font-size: 20px;
-  margin-left: 5px;
-}
-
-.rm-button {
+.button {
   padding: 10px;
   font-size: 20px;
   margin-left: 5px;
@@ -30,5 +24,10 @@
 .msg button {
   font-size: 25px;
   margin-left: 10px;
+}
+
+.dark-theme {
+  background-color: #121212;
+  color: #ffffff;
 }
 
